fix some containers overflow & add copyright on footer

--- a/src/styles/carrousel.css
+++ b/src/styles/carrousel.css
@@ -50,10 +50,4 @@
   .carrousel {
     margin-left: 2em;
   }
-}
-
-@media (max-width: 480px) {
-  .carrousel {
-    width: 100%;
-  }
-}
+} 
