--- a/src/styles/contacto.css
+++ b/src/styles/contacto.css
@@ -43,7 +43,6 @@
   padding: 1rem;
   display: flex;
   flex-direction: column;
-  min-width: 450px;
   gap: .5em;
 }
 
@@ -63,7 +62,6 @@
   border-radius: 4px;
   font-size: 16px;
   outline: none;
-
   box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.2);
   -webkit-box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.2);
   -moz-box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.2);
@@ -103,6 +101,8 @@
 @media (max-width: 750px) {
   .form-container {
     width: 100%;
+    border-radius: 0;
+    margin: 0;
   }
 
   #contact-form {
@@ -111,6 +111,6 @@
   }
 
   .contacto {
-    padding: .5em;
+    padding: 0;
   }
 }
