--- a/src/styles/inicio.css
+++ b/src/styles/inicio.css
@@ -48,6 +48,6 @@
 
 @media (max-width: 972px) {
   .container-titulo {
-    margin-left: 3em;
+    margin-left: 0em;
   }
 }
