--- a/src/styles/proyectos.css
+++ b/src/styles/proyectos.css
@@ -27,3 +27,9 @@
 .tarjeta-proyecto img {
   height: 9rem;
 }
+
+@media (max-width: 750px) {
+  .tarjeta-proyecto {
+    min-width: 24em;
+  }
+}
